Closed Bug 1314193 Opened 8 years ago Closed 8 years ago

Early return in PresShell::Paint if BeginTransaction fails

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: mattwoodrow, Assigned: mattwoodrow)

References

Details

Attachments

(1 file)

Basically the same as bug 1313770.
Attachment #8806193 - Flags: review?(dvander)
Attachment #8806193 - Flags: review?(dvander) → review+
Pushed by danderson@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/373c11f245a7
Early return in PresShell::Paint if BeginTransaction fails. r=dvander
https://hg.mozilla.org/mozilla-central/rev/373c11f245a7
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: