Bug 1314193 - Early return in PresShell::Paint if BeginTransaction fails. r=dvander